k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: outerlyy-user
spec:
  selector:
    matchLabels:
      run: outerlyy-user
  # remove replica if using gitops
  replicas: 1
  template:
    metadata:
      labels:
        run: outerlyy-user
    spec:
      containers:
      - name: outerlyy-user
        image: 587487921095.dkr.ecr.us-east-1.amazonaws.com/outerlyy-dev:latest
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: 512m
            memory: 1024Mi
          requests:
            cpu: 256m
            memory: 256Mi
