k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: outerlyy-user
spec:
  ports:
  - name: service-port
    port: 80
    targetPort: 8080
    
  selector:
    run: outerlyy-user
